some more code cleanup